--- a/inc/1-virtualbox.tex
+++ b/inc/1-virtualbox.tex
@@ -15,7 +15,7 @@
     \item консолидации серверов (возможность мигрировать физические сервера на виртуальные, таким образом увеличивается коэффициент использования серверных мощностей, что позволяет существенно сэкономить на аппаратуре, электроэнергии и обслуживании);
     \item разработке и тестировании приложений (возможность одновременно запускать несколько различных ОС, это удобно при разработке кроссплатформенного ПО, таким образом значительно повышается качество, скорость разработки и тестирования приложений);
     \item бизнесе (использование виртуализации в бизнесе растет с каждым днем и постоянно находятся новые способы применения этой технологии, например, возможность безболезненно сделать снапшот\footnote{Снапшот (англ. snapshot) "--- снимок состояния ВМ в определенный момент времени. Сюда входят настройки ВМ, содержимое памяти, дисков и прочее} и быстро восстановить систему в случае сбоя);
-    \item организации виртуальных рабочих станций (так называемых <<тонких клиентов>>\footnote{Тонкий клиент (англ. thin client) "--- бездисковый компьютер-клиент в сетях с клиент-серверной или терминальной архитектурой, который переносит часть задач по обработке информации на сервер}).
+    \item организации виртуальных рабочих станций (так называемых <<тонких клиентов>>\footnote{Тонкий клиент (англ. thin client) "--- бездисковый компьютер, который переносит задачи по обработке информации на сервер}).
 \end{itemize}
 
 Общая схема взаимодействия виртуализации с аппаратным и программным обеспечением (ПО) представлена на рис.~\ref{pic:virt_scheme}.
