--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -15,7 +15,6 @@
 Облачные вычисления являются следующим шагом в эволюции архитектуры построения информационных систем.
 Благодаря преимуществам данного подхода вполне очевидно, что многие информационные системы в ближайшее время переносятся или будут перенесены в облако.
 Процесс уже идет полным ходом и его игнорирование или недооценка может привести к поражению в конкурентной борьбе на рынке.
-В данном случае имеется в виду не только отставание информационных технологий или неоправданные затраты на него, но и отставание в развитии бизнеса компании, которая зависит от гибкости информационной инфраструктуры и скорости вывода новых сервисов и продуктов на рынок.
 
 Различают три основные модели обслуживания:
 \begin{enumerate}
@@ -34,6 +33,8 @@ SaaS "--- модель, при которой не требуется приоб
 
 PaaS "--- модель, при которой пользователю предоставляется возможность использования облачной инфраструктуры для размещения базового ПО.
 В таком случае конфигурирование программного обеспечения целиком ложится на пользователя, предоставляется только платформа для развертывания ПО.
+
+\clearpage
 
 Примером модели PaaS является предоставление услуги развертывания собственного ПО в рамках облачной инфраструктуры, например Heroku, OpenShift.
 
@@ -57,6 +58,8 @@ IaaS "--- модель, при которой пользователю, дост
     \item общественное облако (community cloud);
     \item гибридное облако (hybrid cloud).
 \end{enumerate}
+
+\clearpage
 
 Частное облако предназначено для использования одной организацией, как правило оно находится в собственности самой организации.
 Публичное облако предназначено для широкой публики, как правило находится в собственности сторонних организаций.
@@ -83,8 +86,7 @@ ownCloud является альтернативой таким облачным
 
 \subsection{Порядок выполнения работы}
 
-Выполнять работу рекомендуется группами студентов по 3-5 человек.
-В качестве сервера может использоваться виртуальная машина с ранее установленным (в ЛР№1) дистрибутивом Debian.
+Для выполнения лабораторной работы, в качестве сервера может использоваться виртуальная машина с ранее установленным (в ЛР№1) дистрибутивом Debian.
 Виртуальная машина должна иметь доступ в сеть Интернет для скачивания нужных пакетов.
 
 \begin{enumerate}
