--- a/inc/f-appendix.tex
+++ b/inc/f-appendix.tex
@@ -2,7 +2,7 @@
 
 Сервис TryStack\footnote{\url{https://trystack.openstack.org}} позволяет использовать готовое окружение OpenStack без развертывания сложной инфраструктуры на локальных серверах.
 
-Для регистрации на сервисе TryStack необходимо иметь аккаунт в Facebook и вступить в группу TryStack\footnote{\url{https://www.facebook.com/groups/269238013145112}}.
+Для регистрации на сервисе TryStack необходимо иметь аккаунт в Facebook и вступить в группу\footnote{\url{https://www.facebook.com/groups/269238013145112}} TryStack.
 
 После отправки заявки на вступление в закрытую группу, возможно, придется подождать несколько дней для подтверждения заявки.
 Когда заявка подтверждена, то можно авторизоваться в панели\footnote{\url{https://x86.trystack.org/dashboard/auth/login/}} TryStack с помощью аккаунта Facebook.
