--- a/inc/1-virtualbox.tex
+++ b/inc/1-virtualbox.tex
@@ -1,7 +1,7 @@
 \section[ЛР №1. Знакомство с виртуализацией, VirtualBox]{Лабораторная работа №1. \\
 Знакомство с виртуализацией. Система виртуализации Oracle VM VirtualBox}
 
-\textbf{Цель работы:} ознакомиться с основами виртуализации, системой виртуализации VirtualBox, научиться настраивать виртуальную машину (ВМ), совершать простейшие операции с ней, устанавливать операционную систему на ВМ.
+\textbf{Цель работы:} ознакомиться с основами виртуализации, системой виртуализации VirtualBox, научиться настраивать виртуальную машину (ВМ), совершать простейшие операции с ней, устанавливать гостевую операционную систему на ВМ.
 
 \subsection{Теоретические основы виртуализации}
 
