--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -1,7 +1,7 @@
 \section[ЛР №2. Модель обслуживания SaaS, ownCloud]{Лабораторная работа №2. \\
 Модель обслуживания SaaS на примере развертывания облачного хранилища ownCloud}
 
-\textbf{Цель работы:} ознакомиться с основными моделями представления облачных услуг (SaaS, PaaS, IaaS), развернуть собственное облачное хранилище, доступное пользователям в пределах локальной сети.
+\textbf{Цель работы:} ознакомиться с основными моделями предоставления облачных услуг (SaaS, PaaS, IaaS), развернуть собственное облачное хранилище, доступное пользователям в пределах локальной сети.
 
 \subsection{Теоретические основы облачных вычислений}
 
