Переименован main.pdf -> metod-oblaka.pdf

--- a/inc/title.tex
+++ b/inc/title.tex
@@ -16,11 +16,11 @@
 
 \vspace{1em}
 
-\Large{А.Р.~Умеров}\footnote{\texttt{admin@amet13.name}} % Автор 1
+\Large{А.Р.~Умеров}\footnote{\texttt{admin@amet13.name}}
 
-\Large{Е.Н.~Мащенко}\footnote{\texttt{elmachenko@mail.ru}} % Автор 2
+\Large{Е.Н.~Мащенко}\footnote{\texttt{elmachenko@mail.ru}}
 
-\Large{\today}\footnote{Последняя версия документа: \url{https://github.com/Amet13/metod-oblaka}} % Дата
+\Large{\today}\footnote{Последняя версия документа: \url{https://github.com/Amet13/metod-oblaka}}
 
 \end{center}
 
