Исправлена ошибка в broadcast-адресе, вывод ifconfig заменен на ip

--- a/inc/b-appendix.tex
+++ b/inc/b-appendix.tex
@@ -82,12 +82,12 @@
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.9\linewidth]{ipconfig}
-    \caption{Настройки сети на хост-компьютере}\label{pic:ipconfig}
+    \caption{Настройки сети на хост-компьютере с Windows}\label{pic:ipconfig}
 \end{figure}
 
 Тут видно, что хост-компьютер находится в сети \texttt{192.168.0.0}, имеет IP-адрес \texttt{192.168.0.10}, шлюзом является маршрутизатор с IP-адресом \texttt{192.168.0.1}.
 
-Настроим простейшую одноранговую сеть для виртуальной машины, пусть IP-адрес виртуальной машины будет \texttt{192.168.0.102}.
+Настроим сетевой интерфейс для виртуальной машины вручную, пусть IP-адрес виртуальной машины будет \texttt{192.168.0.102}.
 Для этого необходимо отредактировать конфигурационный файл сети и привести его к такому виду:
 \begin{lstlisting}
 # nano /etc/network/interfaces
@@ -100,12 +100,12 @@ iface eth0 inet static
 address 192.168.0.102
 netmask 255.255.255.0
 network 192.168.0.0
-broadcast 192.255.255.255
+broadcast 192.168.0.255
 gateway 192.168.0.1
 dns-nameservers 192.168.0.1 8.8.8.8
 \end{lstlisting}
 
-В данном конфугурационном файле указаны настройки для основного интерфейса сети (eth0).
+В данном конфигурационном файле указаны настройки для основного интерфейса сети (eth0).
 После сохранения изменений в конфигурационном файле, необходимо перезапустить демон сети:
 \begin{lstlisting}
 # /etc/init.d/networking restart
@@ -113,13 +113,12 @@ dns-nameservers 192.168.0.1 8.8.8.8
 
 Проверим на виртуальной машине новые настройки сети:
 \begin{lstlisting}
-# ifconfig eth0
-eth0   Link encap:Ethernet  HWaddr 08:00:27:f4:0d:39
-       inet addr:192.168.0.102  Bcast:192.168.0.255  Mask:255.255.255.0
-       UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1
-...
+# ip -4 addr show eth0
+2: eth0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
+    inet 192.168.0.102/24 brd 192.168.0.255 scope global eth0
+       valid_lft forever preferred_lft forever
 \end{lstlisting}
 
-Пробуем пропинговать адрес \texttt{192.168.0.102} или соединиться к виртуальной машине по ssh.
+Для проверки работы сети пробуем пропинговать адрес \texttt{192.168.0.102} или соединиться к виртуальной машине по ssh.
 
 \clearpage
