Fix title for 4 lab

--- a/inc/f-appendix.tex
+++ b/inc/f-appendix.tex
@@ -1,4 +1,4 @@
-\section{Создание инстанса в OpenStack} \label{pril:f}
+\section{Создание инстанса в OpenStack (только для ознакомления)} \label{pril:f}
 
 Сервис TryStack\footnote{\url{https://trystack.openstack.org}} позволяет использовать готовое окружение OpenStack без развертывания сложной инфраструктуры на локальных серверах.
 
